[package]
name = "mongo_bypass"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
mongodb = "2.1.0"
# bson = { version = "2.1.0", features = ["chrono-0_4"] } # Needed for using chrono datetime in doc
bson = "2.1.0"
tokio = "1.17.0"
chrono = "0.4" # Used for setting DateTimes
serde = "1" # Used in the Map Data into Structs section
dotenv = "0.15.0"
serde_json = "1.0.79"
serde_bson = "0.0.1"
rustc-serialize = "0.3.24"